--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,87 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="page">
+      <div class="header">
+        <div class="container">
+          <div class="header__top">
+              <a class="header__home" href="#">
+                <img src="images/namu.png" alt="">
+              </a>
+              <div class="header__menu">
+                <div class="header__burger">
+                  <span class="header__span"></span>
+                </div>
+                <div class="header__language-switcher">
+                  <a class="header__language" href="#">
+                    Ua
+                  </a>
+                  <img src="images/lang-arrow.png" alt="switcher icon">
+                </div>
+
+              </div>
+          </div>
+          <div class="header__content">
+            <div class="header__info">
+              <div class="header__date">10 серпня - 10 листопада</div>
+              <h1 class="header__title">
+                Мистецтво
+              </h1>
+              <h2 class="header__title-second">ХІХ - ХХ ст.</h2>
+              <div class="header__description">Внесок українських митців у світову культуру 19-20ст</div>
+              <a class="header__button button" href="#">Купити квиток</a>
+              <div class="header__bottom">
+                <span>10.08 - 10.10</span>
+              </div>
+            </div>
+            <div class="header__image-wrap">
+              <img
+                class="header__image"
+                src="images/header-pic1.png"
+                alt="Girl from Podillya">
+            </div>
+            <div class="header__image-text">Дівчина з Поділля <br>
+              В. Тропінін</div>
+          </div>
+          <div class="header__visit">
+            <div class="header__about about">
+              <div class="about__item">
+                <div class="about__title">
+                  <span>Розклад сьогодні:</span>
+                </div>
+                <div class="about__text">
+                  <span>12:00 - 19:00</span>
+                </div>
+              </div>
+              <div class="about__item">
+                <div class="about__title">
+                  <span>Адреса:</span>
+                </div>
+                <div class="about__text">
+                  <span>Київ, вул. М. Грушевського, 6</span>
+                </div>
+              </div>
+            </div>
+            <div class="header__visit-options">
+              <ul>
+                <li><a href="#">Спланувати візит</a></li>
+                <li><a href="#">Виставки та події</a></li>
+                <li><a href="#">Колекція</a></li>
+              </ul>
+            </div>
+            <a href="" class="button header__button">Купити квиток</a>
+            <a href="" class="button header__button">Стати членом</a>
+
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
