fonts were added

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./styles/style.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -281,6 +287,15 @@
         </form>
       </section>
     </main>
+
+    <footer class="footer">
+      <a href="#" class="footer__logo"></a>
+      <div class="footer__socials"></div>
+      <div class="footer__timetable"></div>
+      <div class="footer__contacts"></div>
+      <nav class="footer__nav"></nav>
+      <a href="#" class="footer__link"></a>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
