--- a/src/index.html
+++ b/src/index.html
@@ -14,26 +14,30 @@
 
   </head>
   <body class="page">
-    <script type="text/javascript" src="scripts/main.js"></script>
+
 
     <div class="container page__container">
 
       <header class="header container__header">
         <div class="header__burger burger">
-          <span class="burger-menu"></span>
-          <nav class="header__nav2">
+          <div class="burger__menu">
+            <span class="burger__menu-line1"></span>
+            <span class="burger__menu-line2"></span>
+            <span class="burger__menu-line3"></span>
+          </div>
+          <nav class="header__nav2 nav2">
             <ul class="nav2__list">
               <li class="nav2__item">
-                <a href="#" class="nav2__link">Галерея</a>
+                <a href="#gallery" class="nav2__link">Галерея</a>
               </li>
               <li class="nav2__item">
-                <a href="#" class="nav2__link">Виставка та події</a>
+                <a href="#events" class="nav2__link">Виставка та події</a>
               </li>
               <li class="nav2__item">
-                <a href="#" class="nav2__link">Відвудування</a>
+                <a href="#lection" class="nav2__link">Відвудування</a>
               </li>
               <li class="nav2__item">
-                <a href="#" class="nav2__link">Стати нашим другом</a>
+                <a href="#bottom" class="nav2__link">Стати нашим другом</a>
               </li>
               <li class="nav2__item">
                 <a href="#" class="nav2__link">Про Нас</a>
@@ -42,10 +46,10 @@
                 <a href="#" class="nav2__link">Магазин</a>
               </li>
               <li class="nav2__item">
-                <a href="#" class="nav2__link">Блог</a>
+                <a href="#contacts" class="nav2__link">Блог</a>
               </li>
               <li class="nav2__item">
-                <a href="#" class="nav2__link">Контакти</a>
+                <a href="#contacts" class="nav2__link">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -76,6 +80,7 @@
       </div>
 
       <div class="current container__current">
+        <a href="#" name="events"></a>
         <h2 class="current__event">Актуальні події</h2>
         <div class="current__block">
 
@@ -114,6 +119,7 @@
       </div>
 
       <div class="lection container__lection">
+        <a href="#" name="lection"></a>
         <div class="lection__block">
           <p class="lection__event">ЛЕКЦІЯ</p>
           <p class="lection__date">26/08/2019 - 11:00</p>
@@ -122,6 +128,7 @@
       </div>
 
       <div class="gallery container__gallery">
+        <a href="#" name="gallery"></a>
         <h2 class="gallery__name">Галерея</h2>
         <div class="gallery__photo">
           <img
@@ -161,23 +168,31 @@
       </div>
 
       <div class="sub container__sub">
+
         <a href="#" name="bottom"></a>
         <div class="sub__name">Підписка</div>
         <div class="sub__description">Бути в курсі всіх актуальних подій
           та останніх новин.
         </div>
-        <div class="sub__email">
+        <form action="#" class="sub__email">
           <input
             type="email"
             class="sub__email-input"
             placeholder="E-mail"
+            required
           >
-          <div class="sub__email-button"></div>
-        </div>
+          <button class="sub__email-button"></button>
+        </form>
 
       </div>
 
       <footer class="footer container__footer">
+        <a
+          href="#top"
+          name="contacts"
+          class="footer__top"
+        >
+        </a>
         <div class="footer__logos">
           <a class="footer__logos-logo">
             NA
@@ -259,6 +274,7 @@
 
     </div>
 
+    <script type="text/javascript" src="scripts/main.js"></script>
 
   </body>
 </html>
