--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,77 @@
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="wrapper footer__wrapper">
+        <div class="footer__side-a">
+          <div class="footer__side-a-logo-soc">
+            <div class="footer__side-a-logo-soc-logo">NA<br>MU</div>
+            <div class="footer__side-a-logo-soc-soc">
+              <a href=""><img src="images\facebook-footer.svg" alt=""></a>
+              <a href=""><img src="images\instagram-footer.svg" alt=""></a>
+            </div>
+          </div>
+          <div class="footer__side-a-schedule">
+            <h4 class="footer__side-a-schedule-title">Графік роботи:</h4>
+            <ul class="footer__side-a-schedule-list">
+              <li class="footer__side-a-schedule-list-item"><strong>12:00 — 20:00</strong> середа</li>
+              <li class="footer__side-a-schedule-list-item"><strong>12:00 — 20:00</strong> четвер</li>
+              <li class="footer__side-a-schedule-list-item"><strong>12:00 — 20:00</strong> п’ятниця</li>
+              <li class="footer__side-a-schedule-list-item"><strong>11:00 — 19:00</strong> субота</li>
+              <li class="footer__side-a-schedule-list-item"><strong>11:00 — 19:00</strong> неділя</li>
+            </ul>
+            <p class="footer__side-a-schedule-extra">
+              Вихідні понеділок,<br> вівторок<br> Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div class="footer__side-a-contacts">
+            <h4 class="footer__side-a-contacts-title">Контакти:</h4>
+            <p class="footer__side-a-contacts-info">
+              <a href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5285706,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593?hl=ru"
+              class="footer__side-a-contacts-info-address"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+380442781357" class="footer__side-a-contacts-info-phone">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+380442787454" class="footer__side-a-contacts-info-phone">факс +38 (044) 278-74-54 </a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__side-a-contacts-info-mail"> e-mail: info@namu.kiev.ua</a>
+            </p>
+          </div>
+        </div>
+        <div class="footer__side-b">
+          <nav class="footer__side-b-nav">
+            <ul class="footer__side-b-nav-list1">
+              <li class="footer__side-b-nav-list1-item">
+                <a href="" class="footer__side-b-nav-list1-item-link">Галерея</a>
+              </li>
+              <li class="footer__side-b-nav-list1-item">
+                <a href="" class="footer__side-b-nav-list1-item-link">Виставки та події</a>
+              </li>
+              <li class="footer__side-b-nav-list1-item">
+                <a href="" class="footer__side-b-nav-list1-item-link">Відвідування</a>
+              </li>
+              <li class="footer__side-b-nav-list1-item">
+                <a href="" class="footer__side-b-nav-list1-item-link">Стати нашим другом</a>
+              </li>
+            </ul>
+            <ul class="footer__side-b-nav-list2">
+              <li class="footer__side-b-nav-list2-item">
+                <a href="" class="footer__side-b-nav-list2-item-link">Про Нас</a>
+              </li>
+              <li class="footer__side-b-nav-list2-item">
+                <a href="" class="footer__side-b-nav-list2-item-link">Магазтн</a>
+              </li>
+              <li class="footer__side-b-nav-list2-item">
+                <a href="" class="footer__side-b-nav-list2-item-link">Блог</a>
+              </li>
+              <li class="footer__side-b-nav-list2-item">
+                <a href="" class="footer__side-b-nav-list2-item-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
