adaptation to the mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,7 @@
       <section class="section">
         <div class="insert">
           <div class="insert__transition">
+            <div class="line line__insert"></div>
             <img
               src="images/developments/current-events3.png"
               class="insert__transition__picture"
@@ -90,6 +91,7 @@
               </div>
               <h3 class="name__picture">Від класицизму до романтизму</h3>
             </div>
+            <div class="line line__insert-2"></div>
           </div>
         </div>
       </section>
@@ -141,11 +143,13 @@
 
       <section class="section">
         <div class="subscription">
+          <div class="line line__subscription"></div>
           <img
             src="images/footer.png"
             alt=""
             class="subscription__picture"
           >
+          <div class="line line__subscription-2"></div>
 
           <div class="subscription__text">
             <h2 class="title subscription__title">Підписка</h2>
@@ -178,7 +182,9 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__info">
+
           <div class="icons">
+
             <h2 class="namu">
               NA<br>MU
             </h2>
@@ -194,92 +200,98 @@
             >
           </div>
 
-          <div class="schedule">
-            <h3 class="schedule__work">
-              Графік роботи
-            </h3>
-            <p class="schedule__time">
-              <strong>12:00 — 20:00</strong> середа<br>
-              <strong>12:00 — 20:00</strong> четвер<br>
-              <strong>12:00 — 20:00</strong> п’ятниця<br>
-              <strong>11:00 — 19:00</strong> субота<br>
-              <strong>11:00 — 19:00</strong> неділя<br>
-              <br>
-              Вихідні понеділок,<br> вівторок<br>
-              Каса припиняє роботу<br> за 1 годину<br>
-              до закриття музею
-            </p>
-          </div>
+          <div class="footer-info">
 
-          <div class="contacts">
-            <h3 class="contacts__title">
-              Контакти:
-            </h3>
+            <div class="schedule">
+              <h3 class="schedule__work">
+                Графік роботи
+              </h3>
+              <p class="schedule__time">
+                <strong>12:00&nbsp—&nbsp20:00</strong> середа<br>
+                <strong>12:00 — 20:00</strong> четвер<br>
+                <strong>12:00 — 20:00</strong> п’ятниця<br>
+                <strong>11:00 — 19:00</strong> субота<br>
+                <strong>11:00 — 19:00</strong> неділя<br>
+                <br>
+                Вихідні понеділок,<br> вівторок<br>
+                Каса припиняє роботу<br> за 1 годину<br>
+                до закриття музею
+              </p>
+            </div>
 
-            <a href="" class="contacts__address">
-              вул. М. Грушевського, 6; Київ, 01001<br>
-            </a>
+            <div class="contacts">
+              <h3 class="contacts__title">
+                Контакти:
+              </h3>
 
-            <a href="" class="contacts__address">
-              тел. +38 (044) 278-13-57<br> факс +38 (044) 278-74-54<br>
-            </a>
+              <a href="" class="contacts__address">
+                вул. М. Грушевського, 6; Київ, 01001<br>
+              </a>
 
-            <a href="" class="contacts__address">
-              e-mail: info@namu.kiev.ua
-            </a>
+              <a href="" class="contacts__address">
+                тел. +38 (044) 278-13-57<br> факс +38 (044) 278-74-54<br>
+              </a>
+
+              <a href="" class="contacts__address">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+
           </div>
 
           <div class="footer__line"></div>
 
-          <nav class="footer__nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Галерея
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Виставки та події
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Відвідування
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Стати нашим другом
-                </a>
-              </li>
-            </ul>
-          </nav>
+          <div class="footer-nav">
+            <nav class="footer__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="" class="nav__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link">
+                    Виставки&nbspта&nbspподії
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link">
+                    Відвідування
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link">
+                    Стати&nbspнашим&nbspдругом
+                  </a>
+                </li>
+              </ul>
+            </nav>
 
-          <nav class="footer__nav-about">
-            <ul class="nav__contacts">
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Про Нас
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Магазин
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Блог
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="" class="nav__link">
-                  Контакти
-                </a>
-              </li>
-            </ul>
-          </nav>
+            <nav class="footer__nav-about">
+              <ul class="nav__contacts">
+                <li class="nav__item nav__item--second">
+                  <a href="" class="nav__link">
+                    Про&nbspНас
+                  </a>
+                </li>
+                <li class="nav__item nav__item--second">
+                  <a href="" class="nav__link">
+                    Магазин
+                  </a>
+                </li>
+                <li class="nav__item nav__item--second">
+                  <a href="" class="nav__link">
+                    Блог
+                  </a>
+                </li>
+                <li class="nav__item nav__item--second">
+                  <a href="" class="nav__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </footer>
