--- a/src/index.html
+++ b/src/index.html
@@ -13,21 +13,21 @@
       <div class="header">
         <div class="container">
           <div class="header__top">
-              <a class="header__home" href="#">
-                <img src="images/namu.png" alt="">
-              </a>
-              <div class="header__menu">
-                <div class="header__burger">
-                  <span class="header__span"></span>
-                </div>
-                <div class="header__language-switcher">
-                  <a class="header__language" href="#">
-                    Ua
-                  </a>
-                  <img src="images/lang-arrow.png" alt="switcher icon">
-                </div>
-
+            <a class="header__home" href="#">
+              <img src="images/namu.png" alt="">
+            </a>
+            <div class="header__menu">
+              <div class="header__burger">
+                <span class="header__span"></span>
               </div>
+              <div class="header__language-switcher">
+                <a class="header__language" href="#">
+                  Ua
+                </a>
+                <img src="images/lang-arrow.png" alt="switcher icon">
+              </div>
+
+            </div>
           </div>
           <div class="header__content">
             <div class="header__info">
@@ -48,8 +48,7 @@
                 src="images/header-pic1.png"
                 alt="Girl from Podillya">
             </div>
-            <div class="header__image-text">Дівчина з Поділля <br>
-              В. Тропінін</div>
+            <div class="header__image-text">Дівчина з Поділля <br>В. Тропінін</div>
           </div>
           <div class="header__visit">
             <div class="header__about about">
@@ -83,6 +82,51 @@
           </div>
         </div>
       </div>
+      <main>
+        <section class="exhibitions">
+          <img
+            class="exhibitions__image exhibitions__image--1"
+            src="images/exhibition-side-img1.png"
+            alt="art1"
+          >
+          <img
+            class="exhibitions__image exhibitions__image--2"
+            src="images/exhibition-side-img2.png"
+            alt="art1"
+          >
+          <img
+            class="exhibitions__image exhibitions__image--3"
+            src="images/exhibition-side-img3.png"
+            alt="art3"
+          >
+
+          <div class="container">
+            <h3 class="exhibitions__title">Актуальні виставки</h3>
+
+            <div class="exhibitions__item exhibitions__item--left">
+                <div class="exhibitions__date-limited">11.07 - 22.09</div>
+                <div class="exhibitions__subtitle">Кураторська виставка “Ангели”</div>
+                <p class="exhibitions__description">Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...</p>
+                <a href="#" class="button">Купити квиток</a>
+            </div>
+            <div class="exhibitions__item">
+              <div class="exhibitions__date">Діє постійно</div>
+              <div class="exhibitions__subtitle">Мистецтво ХХ ст. — XXI ст.</div>
+              <p class="exhibitions__description">Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.</p>
+              <a href="" class="button">Купити квиток</a></div>
+            <div class="exhibitions__item exhibitions__item--left">
+              <div class="exhibitions__date">Діє постійно</div>
+              <div class="exhibitions__subtitle">Стародавнє мистецтво</div>
+              <p class="exhibitions__description">Визначні приклади стародавнього українського іконопису та живопису</p>
+              <a href="" class="button">Купити квиток</a>
+            </div>
+            <div class="section-bottom">
+              <a href="#" class="section-bottom-link">Архів виставок</a>
+            </div>
+
+          </div>
+        </section>
+      </main>
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
