added header display none

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,89 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <header class="header">
+      <nav class="nav header__nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Галерея
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Виставки та події
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Відвідування
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Стати нашим другом
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Про Нас
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Магазин
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Магазин
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="line-text">
+        <p class="line-text__text">
+          ПОДІЇ
+        </p>
+        <div class="line-text__line"></div>
+      </div>
+
+
+      <div class="header__title">
+        <h1 class="title header__title__main">
+          ХУДОЖ
+          <span class="header__title__main__span">
+            НІЙ
+          </span>
+          <br>
+          МУЗЕЙ
+        </h1>
+        <button class="header__button">
+          <a href="#" class="button__header__link">
+            КВИТКИ
+          </a>
+          <img
+            src="images/button.svg"
+            alt="button"
+            class="button__header__img"
+          >
+        </button>
+      </div>
+
+      <img
+        src="images/header.png"
+        alt="photo museum"
+        class="header__photo"
+      >
+
+    </header>
+
     <main>
       <div class="container">
         <section class="section">
@@ -243,24 +326,24 @@
 
           <div class="footer-nav">
             <nav class="footer__nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a href="" class="nav__link">
+              <ul class="nav__list-footer">
+                <li class="nav__item-footer">
+                  <a href="" class="nav__link-footer">
                     Галерея
                   </a>
                 </li>
-                <li class="nav__item">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer">
+                  <a href="" class="nav__link-footer">
                     Виставки&nbspта&nbspподії
                   </a>
                 </li>
-                <li class="nav__item">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer">
+                  <a href="" class="nav__link-footer">
                     Відвідування
                   </a>
                 </li>
-                <li class="nav__item">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer">
+                  <a href="" class="nav__link-footer">
                     Стати&nbspнашим&nbspдругом
                   </a>
                 </li>
@@ -269,23 +352,23 @@
 
             <nav class="footer__nav-about">
               <ul class="nav__contacts">
-                <li class="nav__item nav__item--second">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer nav__item-footer--second">
+                  <a href="" class="nav__link-footer">
                     Про&nbspНас
                   </a>
                 </li>
-                <li class="nav__item nav__item--second">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer nav__item-footer--second">
+                  <a href="" class="nav__link-footer">
                     Магазин
                   </a>
                 </li>
-                <li class="nav__item nav__item--second">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer nav__item-footer--second">
+                  <a href="" class="nav__link-footer">
                     Блог
                   </a>
                 </li>
-                <li class="nav__item nav__item--second">
-                  <a href="" class="nav__link">
+                <li class="nav__item-footer nav__item-footer--second">
+                  <a href="" class="nav__link-footer">
                     Контакти
                   </a>
                 </li>
