--- a/src/index.html
+++ b/src/index.html
@@ -104,16 +104,21 @@
             <h3 class="exhibitions__title">Актуальні виставки</h3>
 
             <div class="exhibitions__item exhibitions__item--left">
-                <div class="exhibitions__date-limited">11.07 - 22.09</div>
-                <div class="exhibitions__subtitle">Кураторська виставка “Ангели”</div>
-                <p class="exhibitions__description">Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...</p>
-                <a href="#" class="button">Купити квиток</a>
+              <div class="exhibitions__date-limited">11.07 - 22.09</div>
+              <div class="exhibitions__subtitle">Кураторська виставка “Ангели”</div>
+              <p class="exhibitions__description">Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...</p>
+              <a href="#" class="button">Купити квиток</a>
             </div>
             <div class="exhibitions__item">
-              <div class="exhibitions__date">Діє постійно</div>
-              <div class="exhibitions__subtitle">Мистецтво ХХ ст. — XXI ст.</div>
+              <div class="exhibitions__date">
+                Діє постійно
+              </div>
+              <div class="exhibitions__subtitle">
+                Мистецтво ХХ ст. — XXI ст.
+              </div>
               <p class="exhibitions__description">Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.</p>
-              <a href="" class="button">Купити квиток</a></div>
+              <a href="#" class="button">Купити квиток</a>
+            </div>
             <div class="exhibitions__item exhibitions__item--left">
               <div class="exhibitions__date">Діє постійно</div>
               <div class="exhibitions__subtitle">Стародавнє мистецтво</div>
@@ -125,6 +130,45 @@
             </div>
 
           </div>
+        </section>
+        <section class="events">
+          <div class="container">
+            <div class="events__title">Найближчі події</div>
+            <div class="events__block event">
+              <div class="event__info">
+                <div class="event__date">
+                  <p class="event__day">14.08</p>
+                  <p class="event__time">13:00</p>
+                </div>
+                <div class="event__about">
+                  <div class="event__type">Екскурсія</div>
+                  <div class="event__title">Кураторські екскурсії від Павла <br>Гудімова </div>
+                  <div class="event__description">Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...</div>
+                  <div class="button">Зареєструватись</div>
+                </div>
+              </div>
+              <div class="event__image"><img src="images/events-pic1.png" alt="event pic"></div>
+            </div>
+            <div class="events__block event">
+              <div class="event__image">
+                <img src="images/events-pic2.png" alt="event2">
+              </div>
+              <div class="event__info">
+                <div class="event__date">
+                  <p class="event__day">18.08</p>
+                  <p class="event__time">14:00</p>
+                </div>
+                <div class="event__about">
+                  <div class="event__type">Майстер-клас</div>
+                  <div class="event__title">Подорож до Австралії</div>
+                  <div class="event__description">Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.</div>
+                  <div class="button">Зареєструватись</div>
+              </div>
+            </div>
+          </div>
+            <div class="section-bottom">
+              <a href="#" class="section-bottom-link">Календар подій</a>
+            </div>
         </section>
       </main>
     </div>
