--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
+    <header class="header">
+      <div class="header__content">
+        <div class="header__position">
+
+          <div class="header__menu">
+            <input type="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+            <nav class="nav">
+              <h1 class="header__text--nav">
+                NA
+                <br>
+                MU
+              </h1>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Відвідування
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Стати нашим другом
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Магазин
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Блог
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+              <div class="nav__icons">
+                <img
+                  class="nav__icon"
+                  src="images/Icon/facebook.svg"
+                  alt="Facebook icon"
+                >
+                <img
+                  class="nav__icon"
+                  src="./images/Icon/instagram.svg"
+                  alt="Instagram icon"
+                >
+                <img
+                  class="nav__icon"
+                  src="./images/Icon/twitter.svg"
+                  alt="Twitter icon"
+                >
+              </div>
+            </nav>
+          </div>
+
+          <div class="header__position header__position--menu">
+            <div class="header__events">
+              <p class="header__events--text">ПОДІЇ</p>
+              <hr class="header__line">
+            </div>
+          </div>
+
+          <div class="header__title">
+            <h1 class="header__text">
+              Худож<span>ній</span>
+              <br>
+              Музей
+            </h1>
+            <button class="header__button">
+              Квитки
+            </button>
+          </div>
+
+          <div class="header__photo">
+            <h1 class="header__text--logo">
+              NA
+              <br>
+              MU
+            </h1>
+          </div>
+
+        </div>
+      </div>
+    </header>
+
   </body>
 </html>
