--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Oswald&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/NA MU.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+
+      <input type="checkbox"
+               name="toggler"
+               id="menu"
+               class="header__toggler"
+        >
+      <label for="menu" class="header__btn">
+        <span class="header__btn-item"></span>
+      </label>
+
+      <div class="menu header__menu">
+        <img
+        src="./images/NA MU.png"
+        class="menu__logo logo" alt="logo namu"
+        >
+        <nav class="nav menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Відвідування</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Стати нашим другом</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Блог</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="#" class="menu__search fas fa-search"></a>
+        
+
+    </header>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+
