--- a/src/index.html
+++ b/src/index.html
@@ -163,12 +163,24 @@
                   <div class="event__title">Подорож до Австралії</div>
                   <div class="event__description">Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.</div>
                   <div class="button">Зареєструватись</div>
+                </div>
               </div>
             </div>
-          </div>
             <div class="section-bottom">
               <a href="#" class="section-bottom-link">Календар подій</a>
             </div>
+          </div>
+        </section>
+        <section class="visit">
+          <div class="visit__image-wrap">
+            <img src="images/visit-pic.png" alt="" class="visit__image">
+          </div>
+          <div class="visit__info">
+            <div class="visit__title">Сплануйте
+              візит до музею</div>
+            <p class="visit__description">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
+            <div class="visit__button button">Почати</div>
+          </div>
         </section>
       </main>
     </div>
