--- a/src/index.html
+++ b/src/index.html
@@ -173,13 +173,49 @@
         </section>
         <section class="visit">
           <div class="visit__image-wrap">
-            <img src="images/visit-pic.png" alt="" class="visit__image">
+            <img
+              src="images/visit-pic.png"
+              alt=""
+              class="visit__image">
           </div>
           <div class="visit__info">
-            <div class="visit__title">Сплануйте
-              візит до музею</div>
+            <div class="visit__title">Сплануйте візит до музею</div>
             <p class="visit__description">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
             <div class="visit__button button">Почати</div>
+          </div>
+        </section>
+        <section class="news">
+          <div class="container">
+            <div class="news__title">Новини</div>
+            <div class="news__gallery">
+              <div class="news__item news-card">
+                <div class="news-card__picture-wrap">
+                  <img src="images/news-pic1.png" alt="">
+                </div>
+                <div class="news-card__date">9 серпня 2019</div>
+                <div class="news-card__title">Оголошення переможця</div>
+                <div class="news-card__description">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</div>
+              </div>
+              <div class="news__item news-card">
+                <div class="news-card__picture-wrap">
+                  <img src="images/news-pic2.png" alt="">
+                </div>
+                <div class="news-card__date">9 серпня 2019</div>
+                <div class="news-card__title">Міжнародний день котів</div>
+                <div class="news-card__description">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</div>
+              </div>
+              <div class="news__item news-card">
+                <div class="news-card__picture-wrap">
+                  <img src="images/news-pic3.png" alt="">
+                </div>
+                <div class="news-card__date">9 серпня 2019</div>
+                <div class="news-card__title">200 років П. Кулішу</div>
+                <div class="news-card__description">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</div>
+              </div>
+            </div>
+          </div>
+          <div class="section-bottom">
+            <a href="#" class="section-bottom-link">Усі новини</a>
           </div>
         </section>
       </main>
