--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <div class="wrapper">
+      <header class="header">
+        
+      </header>
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
+    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
   </body>
 </html>
