--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,22 @@
           MU
         </a>
       </h2>
+
       <input
         type="checkbox"
         class="switch__checkbox"
         id="check"
       >
       <nav class="header__nav nav">
-        <ul class="nav__list">
-          <li class="nav__item"><a href="" class="nav__link">Галерея</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Виставки та події</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Відвідування</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Стати нашим другом</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Про нас</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Магазин</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Блог</a></li>
-          <li class="nav__item"><a href="" class="nav__link">Контакти</a></li>
+        <ul class="header__nav-list nav__list">
+          <li class="header__nav-item"><a href="" class="header__nav-link">Галерея</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Виставки та події</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Відвідування</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Стати нашим другом</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Про нас</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Магазин</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Блог</a></li>
+          <li class="header__nav-item"><a href="" class="header__nav-link">Контакти</a></li>
         </ul>
       </nav>
 
@@ -289,12 +290,88 @@
     </main>
 
     <footer class="footer">
-      <a href="#" class="footer__logo"></a>
-      <div class="footer__socials"></div>
-      <div class="footer__timetable"></div>
-      <div class="footer__contacts"></div>
-      <nav class="footer__nav"></nav>
-      <a href="#" class="footer__link"></a>
+      <div class="footer__links">
+        <h2 class="footer__logo logo">
+          <a href="#" class="logo__link">
+            NA
+            <br>
+            MU
+          </a>
+        </h2>
+
+        <div class="footer__socials">
+          <a href="https:\\facebook.com" class="footer__socials-link">
+            <svg
+              class="footer__socials-svg"
+              width="12"
+              height="24"
+              viewBox="0 0 12 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.7196 4.64899C2.7196 5.2538 2.7196 7.9533 2.7196 7.9533H0.302532V11.9938H2.7196V24.0009H7.68478V11.9942H11.0166C11.0166 11.9942 11.3287 10.0568 11.4799 7.93841C11.0463 7.93841 7.70355 7.93841 7.70355 7.93841C7.70355 7.93841 7.70355 5.58776 7.70355 5.17573C7.70355 4.76282 8.24491 4.2074 8.77997 4.2074C9.31402 4.2074 10.4412 4.2074 11.4852 4.2074C11.4852 3.65727 11.4852 1.75647 11.4852 0.000976577C10.0915 0.000976577 8.50592 0.000976577 7.80701 0.000976577C2.59687 0.000697581 2.7196 4.04524 2.7196 4.64899Z"
+                fill="black"
+              >
+              </path>
+            </svg>
+          </a>
+
+          <a href="https:\\instagram.com" class="footer__socials-link">
+            <svg
+              class="footer__socials-svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z"
+                fill="black"
+              >
+              </path>
+            </svg>
+          </a>
+
+        </div>
+      </div>
+
+      <div class="footer__timetable">
+        <h3 class="footer__section-header">Графік роботи</h3>
+
+        <ul class="footer__timtable-list">
+          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">12:00 — 20:00</span> середа</li>
+          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">12:00 — 20:00</span> четвер</li>
+          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">12:00 — 20:00</span> п’ятниця</li>
+          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">11:00 — 19:00</span> субота</li>
+          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">11:00 — 19:00</span> неділя</li>
+          <p class="footer__text">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
+        </ul>
+      </div>
+
+      <div class="footer__contacts">
+        <h3 class="footer__section-header">Графік роботи</h3>
+        <p class="footer__text">
+          вул. М. Грушевського, 6; Київ, 01001<br>
+          тел. +38 (044) 278-13-57<br>
+          факс +38 (044) 278-74-54<br>
+          e-mail: info@namu.kiev.ua<br>
+        </p>
+      </div>
+
+      <nav class="footer__nav nav">
+        <ul class="footer__nav-list nav__list">
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Галерея</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Виставки та події</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Відвідування</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Стати нашим другом</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Про нас</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Магазин</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Блог</a></li>
+          <li class="footer__nav-item"><a href="" class="footer__nav-link">Контакти</a></li>
+        </ul>
+      </nav>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
