mobile footer was improved

--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,7 @@
       </div>
 
       <div class="footer__contacts">
-        <h3 class="footer__section-header">Графік роботи</h3>
+        <h3 class="footer__section-header">Контакти:</h3>
         <p class="footer__text">
           вул. М. Грушевського, 6; Київ, 01001<br>
           тел. +38 (044) 278-13-57<br>
